crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@empty.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 1
  ploc: 0
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 1
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 1
size:
  words: 0
  effective_content_units: 0
  sections: 0
  headings: 0
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections: []
complexity:
  reading_path_complexity: 0
  reading_path_complexity_raw: 0
  cognitive_complexity: 0
  halstead:
    operators_distinct: 0
    operators_total: 0
    operands_distinct: 0
    operands_total: 0
    vocabulary: 0
    length: 0
    volume: 0
    difficulty: 0
    effort: 0
    embedded_volume: 0
    total_volume: 0
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 100
  section_balance_score: 1
  good_scaffold_score: 0
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0
  evidence_coverage_score: 0
ai_era:
  filler_lazy_structure_risk: 0
  labels: []
  top_contributors: []
review:
  review_criticality_index: 0
artifacts: []
prose:
  language_detection:
    dominant_language: other
    blocks: []
  english: ~
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 0
    sentences_counted: 0
    blocks_stripped: []
